Fix Capybara thinking checkboxes/radios are not visible
While still hiding them so we can get our custom style.

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -325,7 +325,7 @@ legend {
 input[type='checkbox'],
 input[type='radio'] {
   margin-left: -2rem;
-  opacity: 0;
+  clip: rect(1px, 1px, 1px, 1px);
   position: absolute;
 }
 
